2005-11-19  Pierre Willenbrock <pierre@pirsoft.dnsalias.org>

        * backend/genesys_gl841.c backend/genesys_devices.c: 
          Added support for Canon LiDE 35/40/50
        * backend/genesys.c backend/genesys_low.h 
	  backend/genesys_gl646.c: Reworked data conversion 
          process to convert CIS data, added new slope 
	  generation variant
	* backend/genesys_conv.c backend/genesys_conv_hlp.c: 
          Moved conversion filter functions out of 
          backend/genesys.c

2005-11-18  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c: Disable 2400 DPI for 
	  Epson 3490, use 1600 DPI instead

2005-11-17  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-PARPORT.changes: Update.
	* backend/plustek_pp.c backend/plustek-pp.h 
	  backend/plustek-pp_ptdrv.c backend/plustek-pp_wrapper.c:
	  Fixed sizeof(long) issue for 64bit platforms, see 
	  bugreport #302195.
	* backend/plustek_pp.conf: Default config now only tries to
	  access parport using libieee1284.

2005-11-15  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-options.c 
	  backend/snapscan-scsi.c: Enabled quality calibration for the 
	  Epson 3490
	* doc/descriptions/snapscan.desc: Changed status for Epson Perfection
	  3490 (good) and 3590 (basic)

2005-11-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added HP Scanjet 4890. Added
	  several Optrox scanners.
	* doc/descriptions-external/brother.desc: Marked status of
	  MFC-9880 as "unsupported" based on a user's report.

2005-11-13  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added IOmagic MobileScan
	  USB. Mentioned chips used in the Artec AM12E+.
	* doc/descriptions-external/hp3770.desc
	  doc/descriptions-external/hp8200.desc: Added clarification
	  concerning status of these backends.

2005-11-10  Oliver Schwartz <Oliver.Schwartz@gmx.de>