@@ -8,9 +8,6 @@
 # UMAX Astra 4500 and Avision iVina 1600
 #usb 0x0638 0x0a10
 
-# Canon LiDE 50
-#usb 0x04a9 0x2213
-
 # Hewlett Packard ScanJet 2400c
 #usb 0x03f0 0x0a01
 
@@ -19,6 +16,11 @@
 
 # Plustek OpticPro ST24
 #usb 0x07b3 0x0601
+
+# Canon LiDE 60
+# Be careful and read http://lists.alioth.debian.org/pipermail/sane-devel/2005-October/015059.html
+# Before uncommenting
+#usb 0x04a9 0x221c
 
 #
 # supported scanners
@@ -29,3 +31,7 @@ usb 0x0461 0x0377
 
 # Hewlett Packard ScanJet 2300c
 usb 0x03f0 0x0901
+
+# Canon LiDE 35/40/50
+usb 0x04a9 0x2213
+
